works on desktop, but still blur on iPhone, try to solve this

--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,8 @@ a:hover {
   letter-spacing: 2px;
   line-height: 18px;
 }
+
+
+.medium-zoom-image--opened { 
+  object-fit: contain; 
+}
